--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-svg-transformer": "^0.14.3",
     "react-native-tab-view": "^2.15.2",
     "react-native-webview": "^10.10.0",
+    "react-number-format": "4.4.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
